--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,1 +1,7 @@
-New Authors
+<h2>New Author</h2>
+<form class="" action="/authors" method="post">
+
+  <%- include('_form_fields.ejs') %>
+  <a href="/authors">Cancel</a>
+  <button type="submit" name="button">Create</button>
+</form>
