--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,1 +1,11 @@
-All Authors
+<h2>Search Authors</h2>
+
+<form class="" action="/authors" method="GET">
+  <label for="">name</label>
+  <input type="text" name="name" value="<%= searchOptions.name %>">
+  <button type="submit" name="button">Search</button>
+</form>
+<br>
+<% authors.forEach(author => { %>
+  <div><%= author.name  %></div>
+<% }) %>
