Add books form 18:32 - 3

--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,2 +1,39 @@
-<label for="">Name</label>
-<input type="text" name="name" value="<%= book.name %>">
+<div class="">
+  <label for="">Title</label>
+  <input type="text" name="title" value="<%= book.title %>">
+</div>
+
+<div className="">
+  <label for="">Author</label>
+  <select name="author">
+  <% authors.forEach(author => { %>
+    <% if(author.id === book.author) {%>
+      <option selected label="<%= author.name %>" value="<%= authour.id %>"></option>
+    <% } else { %>
+      <option label="<%= author.name %>" value="<%= author.id %>"></option>
+    <% } %>
+  <% })%>
+  </select>
+</div>
+
+<div className="">
+  <label for="">Published Date</label>
+  <input type="date" name="publishedDate" value="
+    <%= book?.publishedDate?.toISOString?.()?.split?.('T')?.[0] || "" %>
+  ">
+</div>
+
+<div className="">
+  <label for="">Page Count</label>
+  <input type="number" min="1" name="pageCount" value="<%= book.pageCount %>">
+</div>
+
+<div className="">
+  <label for="">Cover</label>
+  <input type="file" name="cover">
+</div>
+
+<div className="">
+  <label for="">Description</label>
+  <textarea name="description" rows="8" cols="80"><%= book.description %></textarea>
+</div>
