--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,8 +1,6 @@
 <div class="">
   <label for="booksTitle">Title</label>
-  <input id="booksTitle" type="text" name="title" value="
-    <%= book.title %>
-  ">
+  <input id="booksTitle" type="text" name="title" value="<%= book.title %>">
 </div>
 
 <div class="">
@@ -20,16 +18,12 @@
 
 <div class="">
   <label for="booksPublishedDate">Published Date</label>
-  <input id="booksPublishedDate" type="date" name="publishedDate" value="
-    <%= book?.publishedDate?.toISOString?.()?.split?.('T')?.[0] || "" %>
-  ">
+  <input id="booksPublishedDate" type="date" name="publishedDate" value="<%= book?.publishedDate?.toISOString?.()?.split?.('T')?.[0] || "" %>">
 </div>
 
 <div class="">
   <label for="booksPageCount">Page Count</label>
-  <input id="booksPageCount" type="number" min="1" name="pageCount" value="
-    <%= book.pageCount %>
-  ">
+  <input id="booksPageCount" type="number" min="1" name="pageCount" value="<%= book.pageCount %>">
 </div>
 
 <div class="">
@@ -39,7 +33,5 @@
 
 <div class="">
   <label for="booksDescription">Description</label>
-  <textarea id="booksDescription" name="description" rows="8" cols="80">
-    <%= book.description %>
-  </textarea>
+  <textarea id="booksDescription" name="description" rows="8" cols="80"><%= book.description %></textarea>
 </div>
