47:11 - Added Recently added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-Middle
+<h2>Recently Added</h2>
+<div className="">
+  <% books.forEach(book => { %>
+    <img width="150" height="100" src="<%= book.coverImagePath %>" alt="">
+  <% }) %>
+</div>
