File upload database 18:05 - 4

--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -28,7 +28,7 @@
 
 <div class="">
   <label for="booksCover">Cover</label>
-  <input id="booksCover" type="file" name="cover">
+  <input id="booksCover" type="file" class="filepond" name="cover">
 </div>
 
 <div class="">
