--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,5 +1,5 @@
 <h2>New Book</h2>
-<form class="" action="/books" method="post" enctype="multipart/form-data">
+<form class="" action="/books" method="post">
 
   <%- include('_form_fields.ejs') %>
   <a href="/books">Cancel</a>
