--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <h2>Recently Added</h2>
 <div className="">
   <% books.forEach(book => { %>
-    <img width="150" height="100" src="<%= book.coverImagePath %>" alt="">
+    <a href="/books/<%= book.id %>">
+      <img width="150" height="100" src="<%= book.coverImagePath %>" alt="">
+    </a>
   <% }) %>
 </div>
