--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -5,6 +5,8 @@
 <% if(booksByAuthor.length > 0) {%>
   <h2>Books by author</h2>
   <% booksByAuthor.forEach(book => { %>
-    <img width="150" height="100" src="<%= book.coverImagePath %>" alt="">
+    <a href="/books/<%= book.id %>">
+      <img width="150" height="100" src="<%= book.coverImagePath %>" alt="">
+    </a>
   <% }) %>
 <% } %>
