--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet" />
     <link
     href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet"/>
-
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
     <script src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
     <script src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
@@ -16,9 +16,14 @@
     <title>*Project Name*</title>
   </head>
   <body>
-    <%- include('../partials/header.ejs') %>
-    <%- include('../partials/errorMessage.ejs') %>
-    <%- body %>
+    <div class="container">
+      <%- include('../partials/header.ejs') %>
+      <div class="inner-container">
+        <%- include('../partials/errorMessage.ejs') %>
+        <%- body %>
+      </div>
+    </div>
+
     <script defer type="text/javascript">
       FilePond.registerPlugin(
         FilePondPluginImagePreview,
