--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2>Search Authors</h2>
+<h2 class="page-header">Search Authors</h2>
 
 <% if(searchOptions) {%>
   <% soName = searchOptions.name %>
