Button styling end - 11

--- a/public/styleSheets/main.css
+++ b/public/styleSheets/main.css
@@ -1,6 +1,7 @@
 @import 'shared/fonts.css';
 @import 'shared/variables.css';
 @import 'shared/header.css';
+@import 'shared/buttons.css';
 
 
 :root{
