Form styles end - 12

--- a/public/styleSheets/shared/buttons.css
+++ b/public/styleSheets/shared/buttons.css
@@ -13,12 +13,13 @@
 .btn {
   border: 1px solid var(--color-button-border);
   border-radius: .5rem;
-  padding: .5rem 1rem;
-  font-size: 1.2rem;
+  padding: .22rem 1rem;
+  font-size: 1rem;
   font-family: 'GothamRounded';
   cursor: pointer;
   text-decoration: none;
   text-align: center;
+  height: 1.7rem;
 }
 
 .btn-row{
