--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -2,6 +2,9 @@
 <form class="" action="/authors/<%= author.id %>?_method=PUT" method="post">
 
   <%- include('_form_fields.ejs') %>
-  <a href="/authors/<%= author.id %>">Cancel</a>
-  <button type="submit" name="button">Update</button>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-danger" href="/authors/<%= author.id %>">Cancel</a>
+    <button class="btn btn-primary" type="submit" name="button">Update</button>
+  </div>
+
 </form>
