--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -5,16 +5,28 @@
 <% }%>
 
 <form class="" action="/authors" method="GET">
-  <label for="">name</label>
-  <input type="text" name="name" value="<%= soName %>">
-  <button type="submit" name="button">Search</button>
+  <div class="form-row">
+    <div class="form-item">
+      <label for="">name</label>
+      <input type="text" name="name" value="<%= soName %>">
+    </div>
+  </div>
+
+  <div class="form-row form-row-end">
+
+    <button class="btn btn-primary" type="submit" name="button">Search</button>
+
+  </div>
+
 </form>
 <br>
 <% authors.forEach(author => { %>
-  <div><%= author.name  %></div>
-  <div class="btn-row">
-    <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
-    <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
-    <%- include("../partials/deleteForm", { url: `/authors/${author.id}` }) %>
+  <div class="book-row">
+    <div><%= author.name  %></div>
+    <div class="btn-row">
+      <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
+      <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+      <%- include("../partials/deleteForm", { url: `/authors/${author.id}` }) %>
+    </div>
   </div>
 <% }) %>
