--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,9 +1,12 @@
 <h2 class="page-header"><%= author.name %></h2>
-<a href="/authors/<%= author.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm', {url: `/authors/${author.id}`}) %>
+
+<div class="btn-row">
+  <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+  <%- include('../partials/deleteForm', {url: `/authors/${author.id}`}) %>
+</div>
 
 <% if(booksByAuthor.length > 0) {%>
-  <h2>Books by author</h2>
+  <h2 class="page-header">Books by author</h2>
   <% booksByAuthor.forEach(book => { %>
     <a href="/books/<%= book.id %>">
       <img width="150" height="100" src="<%= book.coverImagePath %>" alt="">
