--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -3,6 +3,9 @@
 <form class="" action="/books/<%= book.id %>?_method=PUT" method="post">
 
   <%- include('_form_fields.ejs') %>
-  <a href="/books">Cancel</a>
-  <button type="submit" name="button">Update</button>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-danger" href="/books">Cancel</a>
+    <button class="btn btn-primary" type="submit" name="button">Update</button>
+  </div>
+
 </form>
