--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -2,6 +2,8 @@
 <form class="" action="/books" method="post">
 
   <%- include('_form_fields.ejs') %>
-  <a href="/books">Cancel</a>
-  <button type="submit" name="button">Create</button>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-danger" href="/books">Cancel</a>
+    <button class="btn btn-primary" type="submit" name="button">Create</button>
+  </div>
 </form>
