--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -29,10 +29,4 @@
 
 <br>
 
-<div className="">
-  <% books.forEach(book => { %>
-    <a href="/books/<%= book.id %>">
-      <img width="150" height="100" src="<%= book.coverImagePath %>" alt="">
-    </a>
-  <% }) %>
-</div>
+<%- include("../partials/bookGrid", { books: books, large: true }) %>
