--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,3 @@
 <h2 class="page-header">Recently Added</h2>
-<div className="">
-  <% books.forEach(book => { %>
-    <a href="/books/<%= book.id %>">
-      <img width="150" height="100" src="<%= book.coverImagePath %>" alt="">
-    </a>
-  <% }) %>
-</div>
+
+  <%- include("partials/bookGrid", { books: books, large: true }) %>
