--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,3 +1,7 @@
 <% if(locals.errorMessage) { %>
-  <%= errorMessage %>
+
+  <div class="error-message">
+    <%= errorMessage %>
+  </div>
+  
 <% } %>
