--- a/public/styleSheets/main.css
+++ b/public/styleSheets/main.css
@@ -3,6 +3,7 @@
 @import 'shared/header.css';
 @import 'shared/buttons.css';
 @import 'shared/form.css';
+@import 'shared/book.css';
 
 
 :root{
@@ -32,4 +33,8 @@ body {
 .page-header{
   font-size: 2rem;
   font-weight: 500;
+}
+
+.error-message {
+  color: hsl( var(--color-danger-hue), 100%, 50% );
 }
